--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Axis Passenger Transport | Dubai Bus Rental</title>
+    <title>Premium Passenger Transport | Professional Bus Rental</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                navy: '#001F3F',
+                gold: '#D4AF37',
+              },
+              fontFamily: {
+                sans: ['Inter', 'sans-serif'],
+                heading: ['Playfair Display', 'serif'],
+              }
+            }
+          }
+        }
+    </script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Playfair+Display:wght@700;800;900&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Inter', sans-serif;
             scroll-behavior: smooth;
         }
-        .font-heading {
-            font-family: 'Playfair+Display', serif;
-        }
-        .bg-navy { background-color: #001F3F; }
-        .text-gold { color: #D4AF37; }
-        .bg-gold { background-color: #D4AF37; }
-        .border-gold { border-color: #D4AF37; }
-        
-        /* Custom smooth entrance for non-motion elements */
-        .reveal {
-            opacity: 0;
-            transform: translateY(20px);
-            transition: all 0.6s ease-out;
-        }
-        .reveal.active {
-            opacity: 1;
-            transform: translateY(0);
-        }
+        /* Reliability fallbacks for production CSS injection */
+        .bg-navy { background-color: #001F3F !important; }
+        .text-gold { color: #D4AF37 !important; }
+        .bg-gold { background-color: #D4AF37 !important; }
+        .border-gold { border-color: #D4AF37 !important; }
     </style>
 <script type="importmap">
 {
@@ -44,7 +45,7 @@
 }
 </script>
 </head>
-<body class="bg-slate-50 text-slate-900">
+<body class="bg-slate-50 text-slate-900 overflow-x-hidden">
     <div id="root"></div>
 </body>
 </html>
