--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium Passenger Transport | Professional Bus Rental</title>
+    <title>Axis Passenger Transport | Dubai Bus Rental</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -26,26 +26,29 @@
         body {
             scroll-behavior: smooth;
         }
-        /* Reliability fallbacks for production CSS injection */
         .bg-navy { background-color: #001F3F !important; }
         .text-gold { color: #D4AF37 !important; }
         .bg-gold { background-color: #D4AF37 !important; }
         .border-gold { border-color: #D4AF37 !important; }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.564.0",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "framer-motion": "https://esm.sh/framer-motion@^11.0.0"
-  }
-}
-</script>
+    <script type="importmap">
+    {
+      "imports": {
+        "react": "https://esm.sh/react@18.3.1",
+        "react-dom": "https://esm.sh/react-dom@18.3.1",
+        "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
+        "react/": "https://esm.sh/react@18.3.1/",
+        "react-dom/": "https://esm.sh/react-dom@18.3.1/",
+        "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react",
+        "framer-motion": "https://esm.sh/framer-motion@11.11.17?external=react",
+        "@google/genai": "https://esm.sh/@google/genai@1.3.0"
+      }
+    }
+    </script>
 </head>
 <body class="bg-slate-50 text-slate-900 overflow-x-hidden">
     <div id="root"></div>
+    <!-- Crucial entry point for the application -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
