--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       "imports": {
         "react": "https://esm.sh/react@18.3.1",
         "react-dom": "https://esm.sh/react-dom@18.3.1",
-        "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
+        "react-dom/client": "https://esm.sh/react-dom@18.3.1/client?external=react",
         "react/": "https://esm.sh/react@18.3.1/",
         "react-dom/": "https://esm.sh/react-dom@18.3.1/",
         "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react",
