--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Axis Passenger Transport | Dubai Bus Rental</title>
+    <title>Axis | Dubai Bus Rental</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
